zr_vm_rust_binding/include/zr_vm_rust_binding.h

typedef enum EZrRustBindingStatus {
    ZR_RUST_BINDING_STATUS_OK = 0,
    ZR_RUST_BINDING_STATUS_INVALID_ARGUMENT = 1,
    ZR_RUST_BINDING_STATUS_IO_ERROR = 2,
    ZR_RUST_BINDING_STATUS_NOT_FOUND = 3,
    ZR_RUST_BINDING_STATUS_ALREADY_EXISTS = 4,
    ZR_RUST_BINDING_STATUS_BUFFER_TOO_SMALL = 5,
    ZR_RUST_BINDING_STATUS_COMPILE_ERROR = 6,
    ZR_RUST_BINDING_STATUS_RUNTIME_ERROR = 7,
    ZR_RUST_BINDING_STATUS_UNSUPPORTED = 8,
    ZR_RUST_BINDING_STATUS_INTERNAL_ERROR = 9
} ZrRustBindingStatus;
typedef enum EZrRustBindingValueKind {
    ZR_RUST_BINDING_VALUE_KIND_NULL = 0,
    ZR_RUST_BINDING_VALUE_KIND_BOOL = 1,
    ZR_RUST_BINDING_VALUE_KIND_INT = 2,
    ZR_RUST_BINDING_VALUE_KIND_FLOAT = 3,
    ZR_RUST_BINDING_VALUE_KIND_STRING = 4,
    ZR_RUST_BINDING_VALUE_KIND_ARRAY = 5,
    ZR_RUST_BINDING_VALUE_KIND_OBJECT = 6,
    ZR_RUST_BINDING_VALUE_KIND_FUNCTION = 7,
    ZR_RUST_BINDING_VALUE_KIND_NATIVE_POINTER = 8,
    ZR_RUST_BINDING_VALUE_KIND_UNKNOWN = 255
} ZrRustBindingValueKind;
typedef enum EZrRustBindingOwnershipKind {
    ZR_RUST_BINDING_OWNERSHIP_KIND_NONE = 0,
    ZR_RUST_BINDING_OWNERSHIP_KIND_UNIQUE = 1,
    ZR_RUST_BINDING_OWNERSHIP_KIND_SHARED = 2,
    ZR_RUST_BINDING_OWNERSHIP_KIND_WEAK = 3,
    ZR_RUST_BINDING_OWNERSHIP_KIND_BORROWED = 4,
    ZR_RUST_BINDING_OWNERSHIP_KIND_LOANED = 5
} ZrRustBindingOwnershipKind;
typedef struct ZrRustBindingValue ZrRustBindingValue;
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_Free(ZrRustBindingValue *value);
ZR_RUST_BINDING_API ZrRustBindingValueKind ZrRustBinding_Value_GetKind(const ZrRustBindingValue *value);
ZR_RUST_BINDING_API ZrRustBindingOwnershipKind ZrRustBinding_Value_GetOwnershipKind(
        const ZrRustBindingValue *value);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_ReadBool(const ZrRustBindingValue *value,
                                                                     TZrBool *outBoolValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_ReadInt(const ZrRustBindingValue *value,
                                                                    TZrInt64 *outIntValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_ReadFloat(const ZrRustBindingValue *value,
                                                                      TZrFloat64 *outFloatValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_ReadString(const ZrRustBindingValue *value,
                                                                       TZrChar *buffer,
                                                                       TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_Array_Length(const ZrRustBindingValue *value,
                                                                         TZrSize *outLength);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_Array_Get(const ZrRustBindingValue *value,
                                                                      TZrSize index,
                                                                      ZrRustBindingValue **outElement);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_Array_Push(ZrRustBindingValue *value,
                                                                       const ZrRustBindingValue *element);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_Object_Get(const ZrRustBindingValue *value,
                                                                       const TZrChar *fieldName,
                                                                       ZrRustBindingValue **outFieldValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_Object_Set(ZrRustBindingValue *value,
                                                                       const TZrChar *fieldName,
                                                                       const ZrRustBindingValue *fieldValue);