zr_vm_rust_binding/rust/zr_vm_rust_binding_sys/src/lib.rs


    pub fn ZrRustBinding_Value_Free(value: *mut ZrRustBindingValue) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_GetKind(value: *const ZrRustBindingValue) -> ZrRustBindingValueKind;
    pub fn ZrRustBinding_Value_GetOwnershipKind(
        value: *const ZrRustBindingValue,
    ) -> ZrRustBindingOwnershipKind;
    pub fn ZrRustBinding_Value_ReadBool(
        value: *const ZrRustBindingValue,
        outBoolValue: *mut TZrBool,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_ReadInt(
        value: *const ZrRustBindingValue,
        outIntValue: *mut TZrInt64,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_ReadFloat(
        value: *const ZrRustBindingValue,
        outFloatValue: *mut TZrFloat64,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_ReadString(
        value: *const ZrRustBindingValue,
        buffer: *mut c_char,
        bufferSize: TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_Array_Length(
        value: *const ZrRustBindingValue,
        outLength: *mut TZrSize,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_Array_Get(
        value: *const ZrRustBindingValue,
        index: TZrSize,
        outElement: *mut *mut ZrRustBindingValue,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_Array_Push(
        value: *mut ZrRustBindingValue,
        element: *const ZrRustBindingValue,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_Object_Get(
        value: *const ZrRustBindingValue,
        fieldName: *const c_char,
        outFieldValue: *mut *mut ZrRustBindingValue,
    ) -> ZrRustBindingStatus;
    pub fn ZrRustBinding_Value_Object_Set(
        value: *mut ZrRustBindingValue,
        fieldName: *const c_char,
        fieldValue: *const ZrRustBindingValue,
    ) -> ZrRustBindingStatus;
}
